Attempted to wrap the images in a div to give more selectible elements. It did not work as intended but it needs some additional tinkering to get the styling and querySelectors correct.

--- a/interactive-gallery/styles.css
+++ b/interactive-gallery/styles.css
@@ -115,7 +115,7 @@ footer {
 	margin: 0 auto;
 }
 
-.gallery > img {
+.gallery > img, .gallery > div {
 	max-width: 15%;
 	padding: 1em 0;
 	cursor: pointer;
